# custom-webui

./: .env.example  README.md  SECURITY.md  VERSION.md  hatch_build.py  install.bat  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-release.yml  format-backend.yaml  format-build-frontend.yaml  test-realease.yml
backend/: requirements.txt
backend/open_webui/: config.py  env.py  functions.py  main.py
backend/open_webui/models/: auths.py  feedbacks.py  messages.py  users.py
backend/open_webui/retrieval/: utils.py
backend/open_webui/retrieval/loaders/: main.py  youtube.py
backend/open_webui/retrieval/web/: bing.py  brave.py  duckduckgo.py  google_pse.py  jina_search.py  kagi.py  mojeek.py  searchapi.py  searxng.py  serper.py  serply.py  serpstack.py  tavily.py  utils.py
backend/open_webui/routers/: auths.py  chats.py  files.py  memories.py  ollama.py  openai.py  tasks.py  users.py
backend/open_webui/socket/: main.py
backend/open_webui/storage/: provider.py
backend/open_webui/utils/: auth.py  chat.py  middleware.py  misc.py  models.py  task.py
src/lib/: constants.ts
src/lib/apis/: index.ts
src/lib/apis/chats/: index.ts
src/lib/apis/models/: index.ts
src/lib/apis/openai/: index.ts
src/lib/apis/retrieval/: index.ts
src/lib/components/: NotificationToast.svelte
src/lib/components/admin/: Settings.svelte
src/lib/components/admin/Settings/: Connections.svelte  Database.svelte  General.svelte  Interface.svelte
src/lib/components/chat/: Chat.svelte  ChatControls.svelte  MessageInput.svelte  Messages.svelte  Navbar.svelte  Placeholder.svelte  SettingsModal.svelte
src/lib/components/layout/: Navbar.svelte  Sidebar.svelte  UpdateInfoToast.svelte
src/lib/components/playground/: Chat.svelte
src/lib/components/workspace/: Models.svelte
src/lib/i18n/locales/: languages.json
src/lib/stores/: index.ts
src/lib/utils/: index.ts
src/routes/: +layout.svelte
src/routes/(app)/: +layout.svelte
src/routes/(app)/admin/: +layout.svelte
src/routes/(app)/workspace/: +layout.svelte  +page.svelte
src/routes/auth/: +page.svelte
src/routes/error/: +page.svelte
(+35 files in other folders)
